--- a/LSTM Type 1/LSTM Type 1.vcxproj
+++ b/LSTM Type 1/LSTM Type 1.vcxproj
@@ -115,6 +115,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="LSTMModel.cpp" />
+    <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Net.cpp" />
+    <ClCompile Include="Node.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="LSTMModel.h" />
+    <ClInclude Include="MathLib.h" />
+    <ClInclude Include="Net.h" />
+    <ClInclude Include="Node.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
